# claude-notifier

./: .gitignore  LICENSE  README.md  pyproject.toml
scripts/: install.ps1  install.sh
src/claude_notifier/: __init__.py  __main__.py  cli.py  config.py  configure_gui.py  events.py  frozen.py  glass.py  hooks.py  native_notify.py  notify_popup.py  sound.py  tray.py
