[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-notifier"
version = "2.0.0"
description = "Beautiful glassmorphism desktop notifications for Claude Code"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.9"
dependencies = [
    "PySide6>=6.5; platform_system == 'Windows'",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Desktop Environment",
    "Topic :: Software Development :: User Interfaces",
]

[project.scripts]
cn = "claude_notifier.cli:main"

[project.urls]
Homepage = "https://github.com/ixuexi1/claude-notifier"
Issues  = "https://github.com/ixuexi1/claude-notifier/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
claude_notifier = ["py.typed", "sounds/*.wav"]
